docs/envoy/v1.23.1/_sources/intro/arch_overview/security/external_dep_observability_ext.rst.txt
External dependencies: ``observability_ext``
============================================


envoy.filters.http.aws_lambda
-----------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.83.1 <https://github.com/curl/curl/releases/tag/curl-7_83_1>`__, 2022-05-11, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.filters.http.aws_request_signing
--------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.83.1 <https://github.com/curl/curl/releases/tag/curl-7_83_1>`__, 2022-05-11, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.grpc_credentials.aws_iam
------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.83.1 <https://github.com/curl/curl/releases/tag/curl-7_83_1>`__, 2022-05-11, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__


envoy.tracers.datadog
---------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `Datadog OpenTracing C++ Client <https://github.com/DataDog/dd-opentracing-cpp>`__, `1.2.1 <https://github.com/DataDog/dd-opentracing-cpp/releases/tag/v1.2.1>`__, 2021-01-27, 
  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `3.3.0 <https://github.com/msgpack/msgpack-c/releases/tag/cpp-3.3.0>`__, 2020-06-05, 
  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/releases/tag/v1.5.1>`__, 2019-01-16, 


envoy.tracers.dynamic_ot
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/releases/tag/v1.5.1>`__, 2019-01-16, 


envoy.tracers.lightstep
-----------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `lightstep-tracer-cpp <https://github.com/lightstep/lightstep-tracer-cpp>`__, `1942b3f <https://github.com/lightstep/lightstep-tracer-cpp/tree/1942b3f142e218ebc143a043f32e3278dafec9aa>`__, 2020-08-25, 
  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/releases/tag/v1.5.1>`__, 2019-01-16, 


envoy.tracers.opencensus
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.83.1 <https://github.com/curl/curl/releases/tag/curl-7_83_1>`__, 2022-05-11, `cpe:2.3:a:haxx:libcurl:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Ahaxx%3Alibcurl%3A%2A&search_type=all>`__
  `OpenCensus C++ <https://github.com/census-instrumentation/opencensus-cpp>`__, `ba63106 <https://github.com/census-instrumentation/opencensus-cpp/tree/ba631066779a534267fdb1321b19850eb2b0c000>`__, 2020-10-08, 
  `RapidJSON <https://rapidjson.org>`__, `dfbe1db <https://github.com/Tencent/rapidjson/tree/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1>`__, 2019-12-03, `cpe:2.3:a:tencent:rapidjson:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Atencent%3Arapidjson%3A%2A&search_type=all>`__


envoy.tracers.skywalking
------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `cpp2sky <https://github.com/SkyAPM/cpp2sky>`__, `0.4.0 <https://github.com/SkyAPM/cpp2sky/releases/tag/v0.4.0>`__, 2022-03-28, 
  `skywalking-data-collect-protocol <https://github.com/apache/skywalking-data-collect-protocol>`__, `8.9.1 <https://github.com/apache/skywalking-data-collect-protocol/releases/tag/v8.9.1>`__, 2021-12-11, `cpe:2.3:a:apache:skywalking:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aapache%3Askywalking%3A%2A&search_type=all>`__


envoy.tracers.zipkin
--------------------

.. csv-table::
  :header: Name, Version, Release date, CPE
  :widths: 2, 1, 1, 2

  `RapidJSON <https://rapidjson.org>`__, `dfbe1db <https://github.com/Tencent/rapidjson/tree/dfbe1db9da455552f7a9ad5d2aea17dd9d832ac1>`__, 2019-12-03, `cpe:2.3:a:tencent:rapidjson:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Atencent%3Arapidjson%3A%2A&search_type=all>`__

